# storming-bastille

./: .env.example  .gitignore  .trivyignore  CLAUDE.md  DEPLOYMENT.md  README.md  docker-compose.yml  start.sh  stop.sh
.agents/: causal-analyst.md  graph-builder.md  historian.md  orchestrator.md
.claude/: settings.json
.claude/hooks/: pre-commit.sh
.claude/skills/: add-agent.md  add-component.md
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml  (+2 more)
backend/: .env.example  Dockerfile  docker-entrypoint.sh  gcs_backup.py  pyproject.toml
backend/app/: main.py
backend/app/agents/: base_agent.py  causal_analyst.py  followup.py  graph_builder.py  historian.py  orchestrator.py  source_verifier.py
backend/app/api/routes/: admin.py  auth.py  health.py  presets.py  query.py  sessions.py
backend/app/core/: anthropic_client.py  auth.py  cache.py  config.py
backend/app/db/: database.py  repository.py  users_db.py
backend/app/prompts/: presets.json
backend/app/schemas/: graph.py  query.py  response.py  session.py
backend/app/tools/: source_fetcher.py  web_search.py
backend/data/migrations/: 001_initial.sql  002_add_user_id.sql
backend/tests/: conftest.py  test_auth.py  test_config.py  test_health.py
docs/: index.html
frontend/: Dockerfile  docker-entrypoint.sh  next.config.ts  package.json  tsconfig.tsbuildinfo
scripts/: generate_architecture.py  refresh_presets.py
wiki/: API-Reference.md  Agent-System.md  Architecture.md  Configuration.md  Contributing.md  Deployment.md  Frontend.md  Home.md  Security.md  Setup-and-Installation.md
(+57 files in other folders)
