[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "storming-bastille-backend"
version = "1.0.0"
description = "Historical events causal reasoning web app backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "anthropic>=0.40.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.28.0",
    "aiosqlite>=0.20.0",
    "duckduckgo-search>=7.0.0",
    "beautifulsoup4>=4.12.0",
    "python-dotenv>=1.0.0",
    "cachetools>=5.5.0",
    "sse-starlette>=2.1.0",
    "pyyaml>=6.0.2",
    "pyjwt>=2.12.1",
    "bcrypt>=4.2.0",
    "google-cloud-storage>=2.18.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "bandit[toml]>=1.8.0",
    "pip-audit>=2.7.0",
]

[project.scripts]
bastille = "app.main:run"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
